k8s/base/http/scmapping/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scmapping-nodejs
  labels:
    app: scmapping-nodejs
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: scmapping-nodejs
  template:
    metadata:
      labels:
        app: scmapping-nodejs
    spec:
      containers:
      - name: scmapping
        image: nonzod/scmapping-nodejs:0.0.3-amd64
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.05"
          limits:
            memory: "128Mi"
            cpu: "0.1"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
