k8s/base/http/scmapping/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scmapping-service
spec:
  selector:
    app: scmapping-nodejs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
