k8s/base/http/scmapping/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scmapping-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-office"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sc.nztools.net
      secretName: scmapping-tls
  rules:
  - host: sc.nztools.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: scmapping-service
            port:
              number: 3000
